@@ -12,6 +12,7 @@ Changes for 1.3.4.1
 -Added the performance debug printing that you can activate by the F3 key
 -Automatically select the gamepad on startup if user didn't manually set up the keyboard usage
 -Added the ability of the hot connection and disconnection of game controllers
+-Control mappings have been moved into the "controls.ini" to keep the "thextech.ini" file being human-friendly
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
